# agui

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  clippy.toml  getting_started.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
agui_agpu/: Cargo.toml
agui_agpu/examples/: counter.rs  widgets.rs
agui_agpu/src/: lib.rs  render.rs
agui_agpu/src/render/: bounding.rs  clipping.rs  drawable.rs  mod.rs  quad.rs  text.rs
agui_agpu/src/render/shader/: bounding.vert  bounding.vert.spv  clipping.frag  clipping.frag.spv  clipping.vert  clipping.vert.spv  quad.frag.spv  quad.vert  quad.vert.spv  rect.vert  text.frag  text.frag.spv  text.vert  text.vert.spv
agui_agpu/src/shader/: ui.frag  ui.vert  ui.vert.spv
agui_core/: Cargo.toml
agui_core/src/: event.rs  layout.rs  lib.rs  reference.rs  ui.rs  unit.rs  widget.rs
agui_core/src/context/: cache.rs  computed.rs  mod.rs  notifiable.rs  ref.rs  state.rs  tree.rs  value.rs
agui_core/src/plugin/: event.rs  mod.rs
agui_core/src/render/: color.rs  mod.rs
agui_core/src/state/: mod.rs  mouse.rs
agui_core/src/ui/: cache.rs  debug.rs  layout.rs  manager.rs  mod.rs  node.rs  tree.rs  widget.rs
agui_core/src/ui/manager/: debug.rs  mod.rs  node.rs
agui_core/src/unit/: callback.rs  clip.rs  key.rs  layout.rs  mod.rs  render.rs
agui_core/src/widget/: layout.rs  mod.rs
agui_core/src/widget/primitives/: builder.rs  quad.rs  text.rs
agui_macros/: Cargo.toml
agui_macros/src/: builder.rs  functional_widget.rs  layout.rs  lib.rs  widget_derive.rs
agui_macros/tests/: ui.rs
agui_macros/tests/compile-fail/: build_bad_into.rs  build_bad_into.stderr  build_empty.rs  build_empty.stderr  build_field_no_value.rs  build_field_no_value.stderr
agui_macros/tests/compile-pass/: build_deeply_nested.rs  build_enum.rs  build_enum_with_data.rs  build_fields_multiple.rs  build_if.rs  build_if_nested.rs  build_no_block.rs  build_with_block.rs  build_with_comma.rs  build_with_vec.rs  build_without_comma.rs
agui_primitives/: Cargo.toml  README.md
agui_primitives/src/: builder.rs  column.rs  drawable.rs  lib.rs  padding.rs  quad.rs  row.rs  spacing.rs  text.rs
agui_primitives/src/text/: font.rs  mod.rs
agui_widgets/: Cargo.toml  README.md
agui_widgets/src/: app.rs  button.rs  column.rs  lib.rs
agui_widgets/src/plugins/: hovering.rs  mod.rs  provider.rs  theme.rs
agui_widgets/src/state/: hovering.rs  keyboard.rs  mod.rs  mouse.rs  theme.rs  window.rs
benches/: Cargo.toml
benches/agui_core/: callbacks.rs  engine.rs  hashers.rs  inherited_widgets.rs  rc_vs_thread_local.rs  tree.rs  widget_manager.rs
benches/benches/agui_core/: engine.rs  manager.rs  tree.rs  widget_manager.rs
crates/agui_core/: Cargo.toml  Makefile.toml  README.md
crates/agui_core/benches/: dirty_queue.rs  element_tree.rs  engine.rs  events.rs  hashers.rs  plugins.rs  reference_patterns.rs  tree.rs  widget_manager.rs
crates/agui_core/src/: context.rs  event.rs  layout.rs  lib.rs  reference.rs  widget.rs
crates/agui_core/src/callback/: context.rs  func.rs  mod.rs  notifier.rs  queue.rs  strategies.rs
crates/agui_core/src/canvas/: clipping.rs  command.rs  context.rs  element.rs  font.rs  layer.rs  mod.rs  paint.rs  renderer.rs  texture.rs
crates/agui_core/src/ui/: mod.rs  (+3 more)
crates/agui_elements/: Cargo.toml
crates/agui_elements/src/: lib.rs
crates/agui_executor/: Cargo.toml
crates/agui_executor/src/: lib.rs  local.rs  threaded.rs
crates/agui_gestures/: Cargo.toml
crates/agui_inheritance/: Cargo.toml
crates/agui_inheritance/src/: context.rs  element.rs  lib.rs  plugin.rs  widget.rs
crates/agui_listenable/: Cargo.toml
crates/agui_listenable/src/: lib.rs  notifier.rs
crates/agui_macros/: Cargo.toml
crates/agui_macros/src/: builder.rs  functional_widget.rs  inherited_widget.rs  layout_widget.rs  lib.rs  paint_widget.rs  props.rs  render_object_widget.rs  stateful_widget.rs  stateless_widget.rs  utils.rs  widget_derive.rs
crates/agui_primitives/: Cargo.toml  README.md
crates/agui_primitives/src/: align.rs  builder.rs  center.rs  clip.rs  colored_box.rs  column.rs  drawable.rs  falliable.rs  fallible.rs  flex.rs  lib.rs  padding.rs  row.rs  sized_box.rs  spacing.rs  stack.rs  text.rs
crates/agui_render/: Cargo.toml  README.md
crates/agui_render/src/: draw_call.rs  layer.rs  lib.rs
crates/agui_renderer/: Cargo.toml
crates/agui_renderer/src/: current_view.rs  element.rs  lib.rs  manager.rs  manifold.rs  plugin.rs  renderer.rs  view.rs  view_boundary.rs  widget.rs  window.rs
crates/agui_sync/: Cargo.toml
crates/agui_sync/benches/: channels.rs
crates/agui_sync/src/: lib.rs  notify.rs
crates/agui_vello/: Cargo.toml  README.md
crates/agui_vello/src/: binding.rs  create_view.rs  element.rs  event.rs  fonts.rs  handle.rs  lib.rs  pipeline.rs  plugin.rs  renderer.rs  surface.rs  text_layout.rs  view.rs
crates/agui_widgets/: Cargo.toml
crates/agui_widgets/src/: app.rs  button.rs  gesture_detector.rs  lib.rs  plugins.rs  state.rs  text_input.rs  widgets.rs
crates/agui_winit/: Cargo.toml  README.md
crates/agui_winit/src/: app.rs  binding.rs  controller.rs  current_window.rs  event.rs  handle.rs  lib.rs  manager.rs  plugin.rs  view.rs  window.rs  window_collection.rs  windowing_controller.rs
integrations/agui_agpu/: Cargo.toml
integrations/agui_agpu/examples/: async_callback.rs  clipping.rs  counter.rs  hello_world.rs  input.rs  os_info.rs  system_info.rs  title_screen.rs  widgets.rs
integrations/agui_agpu/src/: context.rs  ext.rs  layer.rs  lib.rs  libb.rs  manager.rs  program.rs  render.rs  ui.rs
integrations/agui_vello/: Cargo.toml
integrations/agui_vello/examples/: clipping.rs  hello_world.rs  multiple_windows.rs  system_info.rs
integrations/agui_vello/src/: element.rs  lib.rs  manager.rs  program.rs  text_layout.rs
integrations/agui_wgpu/: Cargo.toml
integrations/agui_wgpu/examples/: async_callback.rs  clipping.rs  counter.rs  hello_world.rs  input.rs  system_info.rs  title_screen.rs
integrations/agui_wgpu/src/: context.rs  handle.rs  lib.rs  program.rs  storage.rs
(+694 files in other folders)
