[package]
name = "agui"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "A reactive GUI project"
exclude = [".github/**/*", "crates/**/*"]
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui", "graphics", "gamedev"]
categories = ["gui", "graphics", "rendering", "game-development"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
agui_core = { path = "crates/agui_core", version = "0.3" }
agui_macros = { path = "crates/agui_macros", version = "0.3" }
agui_primitives = { path = "crates/agui_primitives", version = "0.3" }
agui_widgets = { path = "crates/agui_widgets", version = "0.3" }

agui_winit = { path = "crates/agui_winit", version = "0.1" }
agui_vello = { path = "crates/agui_vello", version = "0.1" }

tracing = "0.1"

thiserror = "1.0"

rand = "0.8"
rustc-hash = "1.1"
slotmap = "1.0"
parking_lot = "0.12"
im-rc = "15.1"

futures = "0.3"
raw-window-handle = "0.5"

glam = "0.24"
lyon = "1.0"

winit = { version = "0.28" }
vello = { git = "https://github.com/linebender/vello.git", version = "0.0.1", rev = "6a827324355178a54e839fa2bef15222a2173b72" }

[features]
default = ["primitives", "widgets", "macros"]
primitives = ["agui_primitives"]
widgets = ["primitives", "agui_widgets"]
macros = ["agui_macros"]

app = ["rustc-hash"]
winit = ["agui_winit", "dep:winit"]
vello = ["agui_vello", "dep:vello"]

[dependencies]
agui_core.workspace = true
agui_macros = { workspace = true, optional = true }
agui_primitives = { workspace = true, optional = true }
agui_widgets = { workspace = true, optional = true }

agui_winit = { workspace = true, optional = true }
agui_vello = { workspace = true, optional = true }

tracing.workspace = true

rustc-hash = { workspace = true, optional = true }

winit = { workspace = true, optional = true }
vello = { workspace = true, optional = true }

[dev-dependencies]
agui = { path = ".", features = ["app", "vello", "winit"] }

criterion = { version = "0.5", features = ["html_reports"] }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sysinfo = "0.29"

fnv = "1.0"
slotmap.workspace = true

[profile.release]
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.agui_core]
opt-level = 1

[profile.dev.package.agui_primitives]
opt-level = 1

[profile.dev.package.agui_widgets]
opt-level = 1

[profile.dev.package.agui_vello]
opt-level = 1

[profile.dev.package.agui_winit]
opt-level = 1

[[bench]]
name = "tree"
path = "benches/agui_core/tree.rs"
harness = false

[[bench]]
name = "engine"
path = "benches/agui_core/engine.rs"
harness = false

[[bench]]
name = "hashers"
path = "benches/agui_core/hashers.rs"
harness = false

[[bench]]
name = "rc_vs_thread_local"
path = "benches/agui_core/rc_vs_thread_local.rs"
harness = false
