[package]
name = "agui"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "A reactive GUI project"
exclude = [".github/**/*", "crates/**/*"]
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui", "graphics"]
categories = ["gui", "graphics", "rendering"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
agui_core = { path = "crates/agui_core", version = "0.3" }
agui_macros = { path = "crates/agui_macros", version = "0.3" }

agui_elements = { path = "crates/agui_elements", version = "0.3" }
agui_inheritance = { path = "crates/agui_inheritance", version = "0.3" }
agui_gestures = { path = "crates/agui_gestures", version = "0.3" }

agui_primitives = { path = "crates/agui_primitives", version = "0.3" }
agui_widgets = { path = "crates/agui_widgets", version = "0.3" }

agui_renderer = { path = "crates/agui_renderer", version = "0.3" }
agui_winit = { path = "crates/agui_winit", version = "0.1" }
agui_vello = { path = "crates/agui_vello", version = "0.1" }

tracing = "0.1"

thiserror = "1.0"

rand = "0.8"
rustc-hash = "1.1"
slotmap = "1.0"
parking_lot = "0.12"
im-rc = "15.1"
bitflags = "2.4"
url = "2.4"
smallbox = "0.8"

mockall = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

futures = "0.3"
raw-window-handle = "0.5"

glam = "0.24"
lyon = "1.0"

winit = { version = "0.28" }
vello = { git = "https://github.com/linebender/vello.git", version = "0.0.1", rev = "ee3a076b291d206c361431cc841407adf265c692" }

[features]
default = ["primitives", "widgets", "macros"]
primitives = ["agui_primitives"]
widgets = ["primitives", "agui_widgets"]
macros = ["agui_macros"]

app = ["rustc-hash", "parking_lot"]
winit = ["agui_renderer", "agui_winit", "dep:winit"]
vello = ["agui_renderer", "agui_vello", "dep:vello"]

mocks = ["agui_core/mocks", "agui_inheritance/mocks"]

[dependencies]
agui_core.workspace = true
agui_macros = { workspace = true, optional = true }

agui_elements.workspace = true
agui_inheritance.workspace = true
agui_primitives = { workspace = true, optional = true }
agui_widgets = { workspace = true, optional = true }

agui_renderer = { workspace = true, optional = true }
agui_winit = { workspace = true, optional = true }
agui_vello = { workspace = true, optional = true }

tracing.workspace = true

rustc-hash = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

winit = { workspace = true, optional = true }
vello = { workspace = true, optional = true }

[dev-dependencies]
agui = { path = ".", features = ["app", "vello", "winit"] }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sysinfo = "0.29"

slotmap.workspace = true

[profile.release]
debug = true

[profile.release.package."*"]
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.agui_core]
opt-level = 1

[profile.dev.package.agui_primitives]
opt-level = 1

[profile.dev.package.agui_widgets]
opt-level = 1

[profile.dev.package.agui_vello]
opt-level = 1

[profile.dev.package.agui_winit]
opt-level = 1
