[package]
name = "agui"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "A reactive GUI project"
exclude = [".github/**/*", "crates/**/*"]
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui", "graphics"]
categories = ["gui", "graphics", "rendering"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
agui_sync = { path = "crates/agui_sync", version = "0.3" }
agui_core = { path = "crates/agui_core", version = "0.3" }
agui_executor = { path = "crates/agui_executor", version = "0.3" }
agui_macros = { path = "crates/agui_macros", version = "0.3" }

agui_elements = { path = "crates/agui_elements", version = "0.3" }
agui_gestures = { path = "crates/agui_gestures", version = "0.3" }

agui_primitives = { path = "crates/agui_primitives", version = "0.3" }
agui_widgets = { path = "crates/agui_widgets", version = "0.3" }

agui_renderer = { path = "crates/agui_renderer", version = "0.3" }
agui_winit = { path = "crates/agui_winit", version = "0.1" }
agui_vello = { path = "crates/agui_vello", version = "0.1" }

tracing = "0.1"

thiserror = "1.0"

rand = "0.8"
rustc-hash = "1.1"
slotmap = "1.0"
parking_lot = "0.12"
im-rc = "15.1"
bitflags = "2.4"
url = "2.4"
smallbox = "0.8"

futures = "0.3"
futures-util = { version = "0.3", default-features = false }
futures-lite = "2.2"
futures-executor = "0.3"
event-listener = "4.0"
async_cell = "0.2.2"
async-watch = "0.3"
async-lock = "3.3"
async-channel = "2.1"

mockall = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

glam = "0.24"
lyon = "1.0"

raw-window-handle = "0.5"

winit = { version = "0.28" }
vello = { git = "https://github.com/linebender/vello.git", version = "0.0.1", rev = "bd235d7977772440618eebb3d304bc85be143e65" }

[features]
default = ["primitives", "widgets", "macros"]
primitives = ["agui_primitives"]
widgets = ["primitives", "agui_widgets"]
macros = ["agui_macros"]

app = ["rustc-hash", "parking_lot"]
multi-threaded = ["agui_executor/multi-threaded"]

winit = ["agui_renderer/window", "agui_winit", "dep:winit"]
vello = ["agui_renderer/window", "agui_vello", "dep:vello"]
winit-vello = ["winit", "vello", "agui_vello/window"]

mocks = ["agui_core/mocks"]

[dependencies]
agui_sync.workspace = true
agui_core.workspace = true
agui_executor.workspace = true
agui_macros = { workspace = true, optional = true }

agui_elements.workspace = true
agui_primitives = { workspace = true, optional = true }
agui_widgets = { workspace = true, optional = true }

agui_renderer = { workspace = true, optional = true }
agui_winit = { workspace = true, optional = true }
agui_vello = { workspace = true, optional = true }

tracing.workspace = true

rustc-hash = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

winit = { workspace = true, optional = true }
vello = { workspace = true, optional = true }

[dev-dependencies]
agui = { path = "." }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures-timer = "3.0"
sysinfo = "0.29"

slotmap.workspace = true

[profile.release]
debug = true

[profile.release.package."*"]
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.agui_core]
opt-level = 1

[profile.dev.package.agui_primitives]
opt-level = 1

[profile.dev.package.agui_widgets]
opt-level = 1

[profile.dev.package.agui_vello]
opt-level = 1

[profile.dev.package.agui_winit]
opt-level = 1

[[example]]
name = "clipping"
required-features = ["app", "winit-vello", "vello"]

[[example]]
name = "current_window"
required-features = ["app", "winit-vello", "vello"]

[[example]]
name = "flexbox"
required-features = ["app", "winit-vello", "vello"]

[[example]]
name = "hello_world"
required-features = ["app", "winit-vello", "vello"]

[[example]]
name = "multiple_windows"
required-features = ["app", "winit-vello", "vello"]

[[example]]
name = "responsive_widgets"
required-features = ["app", "winit-vello", "vello"]

[[example]]
name = "system_info"
required-features = ["app", "winit-vello", "vello"]
