[package]
name = "agui_agpu"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "An agpu renderer for agui widgets"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = [ "gui", "graphics", "gamedev", "widgets", "agpu" ]
categories = [ "gui", "graphics", "rendering", "game-development" ]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
agui = { path = "../" }

log = "0.4"
downcast-rs = "1.2"
parking_lot = "0.11"

agpu = { git = "https://github.com/lyricwulf/agpu" }
bytemuck = "1.7"
generational-arena = "0.2"

[[example]]
name = "widgets"
path = "examples/widgets.rs"