[package]
name = "agui_agpu"
version = "0.2.0"
edition = "2021"
resolver = "2"
description = "An agpu renderer for agui widgets"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = [ "gui", "graphics", "gamedev", "widgets", "agpu" ]
categories = [ "gui", "graphics", "rendering", "game-development" ]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
agui = { path = "../", version = "0.2" }

log = "0.4"
downcast-rs = "1.2"
parking_lot = "0.11"

agpu = { git = "https://github.com/lyricwulf/agpu", commit = "4ea1e92d3450ac94dca0c3a887ce54193d4b52e9" }
bytemuck = "1.7"

lyon = "0.17"
glyph_brush_draw_cache = "0.1"

[[example]]
name = "widgets"
path = "examples/widgets.rs"