[package]
name = "agui_core"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "The core library of agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui"]
license = "MIT OR Apache-2.0"

[dependencies]
de-ref = "1.0"
cfg-if = "1.0"
morphorm = "0.2"
generational-arena = "0.2"
downcast-rs = "1.2"
parking_lot = "0.11"