[package]
name = "agui_core"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "The core library of agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui"]
categories = [ "gui", "graphics", "game-development" ]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
cfg-if = "1.0"
downcast-rs = "1.2"
generational-arena = "0.2"
morphorm = "0.2"
parking_lot = "0.11"