[package]
name = "agui_macros"
version = "0.2.0"
edition = "2021"
resolver = "2"
description = "The macro utilities of agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = [ ]
categories = [ ]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[features]
default = []
internal = []

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
darling = "0.13"
proc-macro-error = { version = "1", default-features = false }

[dev-dependencies]
trybuild = "1.0"

agui_core = { path = "../agui_core" }
agui_primitives = { path = "../agui_primitives" }