[package]
name = "agui_primitives"
version = "0.2.0"
edition = "2021"
resolver = "2"
description = "Provides primitive widgets for agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = [ "gui", "gamedev" ]
categories = [ "gui", "game-development" ]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
agui_core = { path = "../agui_core", version = "0.2" }
agui_macros = { path = "../agui_macros", version = "0.2", features = [ "internal" ]}

# glyph_brush = "0.7"
glyph_brush_layout = "0.2"