[package]
name = "agui_widgets"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Provides basic widgets for agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = [ "gui", "gamedev" ]
categories = [ "gui", "game-development" ]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
log = "0.4"
bitflags = "1.3"

agui_core = { path = "../agui_core" }
agui_macros = { path = "../agui_macros", features = [ "internal" ]}
agui_primitives = { path = "../agui_primitives" }