[package]
name = "benches"
version = "0.1.0"
edition = "2021"
description = "Benchmarks for Agui"
publish = false
license = "MIT OR Apache-2.0"

[dev-dependencies]
criterion = "0.3"
agui = { path = "../" }

[[bench]]
name = "tree"
path = "benches/agui_core/tree.rs"
harness = false

[[bench]]
name = "manager"
path = "benches/agui_core/manager.rs"
harness = false