[package]
name = "agui_core"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "The core library of agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
mocks = ["mockall"]

[dependencies]
cfg-if = "1.0"

tracing.workspace = true

thiserror.workspace = true

rand.workspace = true
rustc-hash.workspace = true
slotmap.workspace = true
parking_lot.workspace = true
im-rc.workspace = true
bitflags.workspace = true
url.workspace = true

glam.workspace = true
lyon.workspace = true

mockall = { workspace = true, optional = true }

[dev-dependencies]
agui_macros.workspace = true

mockall.workspace = true
criterion.workspace = true

fnv = "1.0"

[[bench]]
name = "engine"
path = "benches/engine.rs"
harness = false

[[bench]]
name = "hashers"
path = "benches/hashers.rs"
harness = false

[[bench]]
name = "reference_patterns"
path = "benches/reference_patterns.rs"
harness = false

[[bench]]
name = "tree"
path = "benches/tree.rs"
harness = false
