[package]
name = "agui_core"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "The core library of agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
mocks = ["mockall"]

[dependencies]
tracing.workspace = true

thiserror.workspace = true

rand.workspace = true
rustc-hash.workspace = true
slotmap.workspace = true
parking_lot.workspace = true
im-rc.workspace = true
bitflags.workspace = true
url.workspace = true
smallbox.workspace = true

futures = { workspace = true, features = ["thread-pool"] }

glam.workspace = true
lyon.workspace = true

mockall = { workspace = true, optional = true }

[dev-dependencies]
agui_macros.workspace = true

mockall.workspace = true
criterion.workspace = true

fnv = "1.0"
concurrent-queue = "2.4"

[[bench]]
name = "widget_manager"
path = "benches/widget_manager.rs"
harness = false

[[bench]]
name = "hashers"
path = "benches/hashers.rs"
harness = false

[[bench]]
name = "reference_patterns"
path = "benches/reference_patterns.rs"
harness = false

[[bench]]
name = "dirty_queue"
path = "benches/dirty_queue.rs"
harness = false

[[bench]]
name = "tree"
path = "benches/tree.rs"
harness = false
