[package]
name = "agui_executor"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "Provides the executors agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
multi-threaded = ["dep:parking_lot", "dep:oneshot"]

[dependencies]
agui_sync.workspace = true

agui_core.workspace = true

tracing.workspace = true

rustc-hash.workspace = true
slotmap.workspace = true
parking_lot = { workspace = true, optional = true }

futures = { workspace = true, features = ["thread-pool"] }
futures-executor.workspace = true

oneshot = { version = "0.1", optional = true }
