[package]
name = "agui_inheritance"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "Provides inheritance functionality for agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
mocks = ["mockall"]

[dependencies]
agui_core.workspace = true
agui_macros.workspace = true

tracing.workspace = true

rustc-hash.workspace = true
slotmap.workspace = true
im-rc.workspace = true

mockall = { workspace = true, optional = true }

[dev-dependencies]
agui_core = { workspace = true, features = ["mocks"] }

mockall.workspace = true
