[package]
name = "agui_listenable"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "Provides notifiers and listeners for agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
agui_core.workspace = true
