[package]
name = "agui_macros"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "The macro utilities of agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = []
categories = []
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[features]
default = []
internal = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
heck = "0.4"
toml = "0.7"
