[package]
name = "agui_primitives"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "Provides primitive widgets for agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
agui_core.workspace = true
agui_macros.workspace = true

agui_elements.workspace = true
agui_inheritance.workspace = true

rustc-hash.workspace = true
im-rc.workspace = true

unicode-segmentation = "1.9"
