[package]
name = "agui_renderer"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "Provides traits for agui renderer integrations"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui", "graphics"]
categories = ["gui", "graphics", "rendering"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
agui_core.workspace = true
agui_macros.workspace = true

agui_inheritance.workspace = true

tracing.workspace = true

rustc-hash.workspace = true
