[package]
name = "agui_renderer"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "Provides traits for agui renderer integrations"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui", "graphics"]
categories = ["gui", "graphics", "rendering"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
window = ["raw-window-handle"]

[dependencies]
agui_core.workspace = true
agui_elements.workspace = true
agui_macros.workspace = true

tracing.workspace = true

rustc-hash.workspace = true
slotmap.workspace = true

async-channel.workspace = true

raw-window-handle = { workspace = true, optional = true }
