[package]
name = "agui_vello"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Provides vello integration for agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui", "graphics", "gamedev"]
categories = ["gui", "graphics", "rendering", "game-development"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
agui_core = { path = "../agui_core", version = "0.3" }
agui_primitives = { path = "../agui_primitives", version = "0.3" }
agui_macros = { path = "../agui_macros", version = "0.3" }

vello = { git = "https://github.com/linebender/vello.git", version = "0.0.1", rev = "6a827324355178a54e839fa2bef15222a2173b72" }

tracing = "0.1"

fnv = "1.0"
futures = "0.3"
raw-window-handle = "0.5"
