[package]
name = "agui_vello"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Provides vello integration for agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui", "graphics"]
categories = ["gui", "graphics", "rendering"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
agui_core.workspace = true
agui_macros.workspace = true

agui_inheritance.workspace = true
agui_primitives.workspace = true

agui_renderer.workspace = true

tracing.workspace = true

rustc-hash.workspace = true
parking_lot.workspace = true

futures.workspace = true

raw-window-handle.workspace = true

vello.workspace = true
