[package]
name = "agui_widgets"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "Provides basic widgets for agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = [ "gui", "gamedev" ]
categories = [ "gui", "game-development" ]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bitflags = "1.3"

downcast-rs = "1.2"
parking_lot = "0.12"
anymap = "0.12"
tracing = "0.1"

agui_core = { path = "../agui_core", version = "0.3" }
agui_macros = { path = "../agui_macros", version = "0.3" }
agui_primitives = { path = "../agui_primitives", version = "0.3" }