[package]
name = "agui_widgets"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "Provides basic widgets for agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui", "gamedev"]
categories = ["gui", "game-development"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
agui_core.workspace = true
agui_macros.workspace = true
agui_primitives.workspace = true

tracing.workspace = true

parking_lot.workspace = true

bitflags = "2.4"
