[package]
name = "agui_winit"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Provides winit integration for agui"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = ["gui"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
agui_core.workspace = true
agui_macros.workspace = true

agui_elements.workspace = true
agui_primitives.workspace = true

agui_renderer.workspace = true

tracing.workspace = true

rustc-hash.workspace = true

futures.workspace = true
async-channel.workspace = true

raw-window-handle.workspace = true

winit.workspace = true
