[package]
name = "agui_wgpu"
version = "0.3.0"
edition = "2021"
resolver = "2"
description = "An wgpu renderer for agui widgets"
homepage = "https://github.com/Stumblinbear/agui"
repository = "https://github.com/Stumblinbear/agui"
keywords = [ "gui", "graphics", "gamedev", "widgets", "wgpu" ]
categories = [ "gui", "graphics", "rendering", "game-development" ]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
agui = { path = "../../", version = "0.3" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
downcast-rs = "1.2"
parking_lot = "0.12"
fnv = "1.0"

futures = "0.3"
wgpu = "0.14"
winit = "0.27"
bytemuck = { version = "1.12", features = ["derive"] }

lyon = "0.17"
glyph_brush_layout = "0.2"
glyph_brush_draw_cache = "0.1"

[dev-dependencies]
sysinfo = "0.26"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "input"
path = "examples/input.rs"

[[example]]
name = "title_screen"
path = "examples/title_screen.rs"
